--- a/DressAppSolution/DressApp/Properties/Resources.resx
+++ b/DressAppSolution/DressApp/Properties/Resources.resx
@@ -451,4 +451,7 @@
   <data name="yes" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons\menu\yes.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bolsokevin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\bags\bolsokevin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
