--- a/DressAppSolution/DressApp/Properties/Resources.resx
+++ b/DressAppSolution/DressApp/Properties/Resources.resx
@@ -151,9 +151,6 @@
   <data name="breezy_skirt_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\breezy_skirt_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="breezy_skirt_waves" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\images\skirts\breezy_skirt_waves.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="breezy_skirt_winter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\skirts\breezy_skirt_winter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -453,5 +450,11 @@
   </data>
   <data name="bolsokevin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\images\bags\bolsokevin.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="big_skirt_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\skirts\big_skirt_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="big_skirt_waves" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\images\skirts\big_skirt_waves.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
